# flexget-plugin-traits

./: .gitignore  README.md  pyproject.toml
examples/: traits.yaml
tests/: configuration.yaml  test_example.py  test_plugin.py  test_traits.py  utils.py
traits/: traits.py
