[tool.poetry]
name = "traits"
version = "1.0.0"
description = "Override FlexGet's built-in qualities"
authors = ["Janne K <0x022b@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
flake8 = "^3.9"
FlexGet = "^3.1"
jsonschema = "^3.2"
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-ra -q"
filterwarnings = [
    "ignore::DeprecationWarning",
]
testpaths = [
    "tests",
]
